[package]
name = "SC_Sub_Poster"
version = "0.0.1"
edition = "2021"
authors = ["Dominik Adrian Grzywak <starterx4@gmail.com>"]
description = "Minimal port of NodeJS steam-user library to Rust just for sending messages to group chats"
license = "LGPL-3.0-only"
rust-version = "1.85"

[dependencies]
steam-vent = { path= "./steam-vent" }
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = "0.3"
steamid-ng = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
protobuf = "2.26"
bytes = "1.10.0"
atomic = "0.6.0"
tokio-util = { version = "0.7.13", features = ["codec", "futures-io", "futures-util", "net"] }
bytemuck = "1.22.0"
sha1 = "0.10.6"
rand = "0.9.2"
num-traits = "0.2.19"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[[example]]
name = "env_credentials"

[[example]]
name = "chat_demo"

[[example]]
name = "main_demo"

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true
strip = true
