[package]
name = "SC_Sub_Poster"
version = "0.3.1"
edition = "2021"
authors = ["Dominik Adrian Grzywak <starterx4@gmail.com>"]
description = "Minimal port of NodeJS steam-user library to Rust just for sending messages to group chats"
repository = "https://github.com/KetherPL/SC_Sub_Poster"
homepage = "https://kether.pl"
license = "LGPL-3.0-only"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3"
steamid-ng = "1.0.0"
steamid-ng2 = { version = "2.0.0", package = "steamid-ng" } #logon.rs version missmatch as steam-vent uses v2 but we stick to v1
serde = { version = "1.0", features = ["derive"] }
steam-vent = "0.4.1"
thiserror = "1.0.69"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3"
serde_json = "1.0"

[[example]]
name = "env_credentials"

[[example]]
name = "chat_demo"

[[example]]
name = "main_demo"

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true
strip = true
